// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TO CLASSNAMES, sheet NATIVE 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "color: blue /*sheet.label*/",
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "nativeOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 20 /*sheet.nativeOnly/$native*/",
        ],
      },
    ],
    "name": "nativeOnly",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 4 /*sheet.root[0]*/",
          "padding: 4 /*sheet.root[0]*/",
        ],
      },
      Object {
        "atomicArray": Array [
          "padding: 10 /*sheet.root[1]/$native*/",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
}
`;

exports[`TO CLASSNAMES, sheet WEB 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".d { color:blue /*sheet.label*/ }",
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".a { margin:4px /*sheet.root[0]*/ }",
          ".b { padding:4px /*sheet.root[0]*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          ".c { margin:10px /*sheet.root[0]/$web*/ }",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".e { color:red /*sheet.webOnly/$web*/ }",
          ".f { padding:20px /*sheet.webOnly/$web*/ }",
        ],
      },
    ],
    "name": "webOnly",
    "~": "c",
  },
}
`;
